wikipage overflow fix, table width fix

--- a/src/styles/markdown.module.css
+++ b/src/styles/markdown.module.css
@@ -34,7 +34,14 @@
   font-size: 16px;
   line-height: 1.625;
   word-wrap: break-word;
+  width: 560px;
 }
+@media (min-width: 1200px) {
+  .markdownBody {
+    max-width: 900px;
+  }
+}
+
 
 .markdownBody details,
 .markdownBody figcaption,
@@ -218,6 +225,7 @@ html[data-theme='dark'] .markdownBody a {
   border-spacing: 0;
   border-collapse: collapse;
   width: 100%;
+  table-layout: fixed;
 }
 .markdownBody .table-container {
   overflow-x: auto;
@@ -501,8 +509,14 @@ html[data-theme='dark'] .markdownBody a {
 
 .markdownBody table th,
 .markdownBody table td {
-  padding: 6px 13px;
+  padding: 6px;
   border: 1px solid #d0d7de;
+  word-break: break-all;
+  width:'50%';
+}
+
+.markdownBody table td  {
+  vertical-align: top;
 }
 
 .markdownBody table tr {
